--- a/resources/lang/ua.json
+++ b/resources/lang/ua.json
@@ -74,5 +74,39 @@
     "Confirm Password": "Підтвердіть пароль",
     "Saved": "Збережено",
     "Update your account's profile information.": "Оновіть інформацію профілю свого облікового запису.",
-    "one_field_required" : "Принаймні одне поле є обов’язковим."
+    "one_field_required" : "Принаймні одне поле є обов’язковим.",
+    "Spendings": "Витрати",
+    "Gas": "Газ",
+    "Odorant": "Одорант",
+    "Created At": "Дата створення",
+    "Add Spending": "Додати витрати",
+    "Edit Spending": "Редагувати витрати",
+    "Self spendings": "Власні витрати",
+    "Heater Time": "Час роботи обігрівача",
+    "Boiler Time": "Час роботи котла",
+    "Heater Gas": "Газ для обігрівача",
+    "Boiler Gas": "Газ для котла",
+    "Add Self Spending": "Додати власні витрати",
+    "Edit Self Spending": "Редагувати власні витрати",
+    "Notes": "Нотатки",
+    "Operational Switching": "Оперативні перемикання",
+    "Received Orders": "Отримані розпорядження",
+    "Completed Works": "Виконані роботи під час зміни",
+    "Visits by Outsiders": "Відвідування ГРС сторонніми особами",
+    "Inspection of Pressure Tanks": "Огляд посудин, що працюють під тиском",
+    "Create New Note": "Створити нову нотатку",
+    "Edit Note": "Редагувати нотатку",
+    "Update Note": "Оновити нотатку",
+    "Create Note": "Створити нотатку",
+    "Journals": "Журнали",
+    "Pressure In": "Тиск вх.",
+    "Pressure Out 1": "Тиск вих. I",
+    "Pressure Out 2": "Тиск вих. II",
+    "Temperature 1": "℃ вих. I",
+    "Temperature 2": "℃ вих. II",
+    "Odorant Value 1": "Рівень одоранту I",
+    "Odorant Value 2": "Рівень одоранту II",
+    "Gas Heater Temperature In": "℃ вх. ПГ",
+    "Gas Heater Temperature Out": "℃ вих. ПГ",
+    "Add Journal": "Додати журнал"
 }
