--- a/resources/lang/ua.json
+++ b/resources/lang/ua.json
@@ -12,7 +12,10 @@
     "Gassiness": "Загазованість",
     "Journal": "Журнал",
     "Log Out": "Вийти",
+    "Login": "Увійти",
     "Name": "Ім'я",
+    "Forgot your password?": "Забули пароль?",
+    "Remember me": "Запам'ятати мене",
     "Once your account is deleted, all of its resources and data will be permanently deleted. Before deleting your account, please download any data or information that you wish to retain.": "Після видалення облікового запису всі його ресурси та дані будуть безповоротно видалені. Перш ніж видалити свій обліковий запис, будь ласка, завантажте будь-які дані або інформацію, яку ви хочете зберегти.",
     "Password": "Пароль",
     "Patronymic": "По батькові",
