--- a/resources/lang/ua.json
+++ b/resources/lang/ua.json
@@ -10,7 +10,7 @@
     "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to choose a new one.": "Забули пароль? Немає проблем. Просто вкажіть свою адресу електронної пошти, і ми відправимо вам посилання для скидання пароля, за допомогою якого ви зможете обрати новий.",
     "Generate report": "Згенерувати звіт",
     "Gassiness": "Загазованість",
-    "Journal": "Журнал",
+    "Journal": "Показники",
     "Log Out": "Вийти",
     "Login": "Увійти",
     "Name": "Ім'я",
@@ -101,7 +101,7 @@
     "Edit Note": "Редагувати нотатку",
     "Update Note": "Оновити нотатку",
     "Create Note": "Створити нотатку",
-    "Journals": "Журнали",
+    "Journals": "Показники",
     "Pressure In": "Тиск вх.",
     "Pressure Out 1": "Тиск вих. I",
     "Pressure Out 2": "Тиск вих. II",
@@ -111,5 +111,17 @@
     "Odorant Value 2": "Рівень одоранту II",
     "Gas Heater Temperature In": "℃ вх. ПГ",
     "Gas Heater Temperature Out": "℃ вих. ПГ",
-    "Add Journal": "Додати журнал"
+    "Add Journal": "Додати показники",
+    "Edit Journal": "Редагувати показники",
+    "previous": "Попередня",
+    "next": "Наступна",
+    "pagination_navigation": "Навігація пагінацією",
+    "showing": "показано",
+    "Showing": "Показано",
+    "to": "до",
+    "of": "з",
+    "results": "результатів",
+    "go_to_page": "Перейти на сторінку :page",
+    "Create record": "Зробити запис",
+    "Update record": "Оновити запис"
 }
