--- a/resources/lang/ua.json
+++ b/resources/lang/ua.json
@@ -136,6 +136,8 @@
     "stations_by_region": "Станції за регіонами",
     "stations_by_type": "Станції за типами",
     "select_report_type:": "Звіт:",
-    "forecast_depth": "Глибина прогнозу"
+    "forecast_depth": "Глибина прогнозу",
+
+    "Back": "Назад"
 
 }
