Translate and settings from DB

--- a/resources/lang/ua.json
+++ b/resources/lang/ua.json
@@ -77,7 +77,7 @@
     "Confirm Password": "Підтвердіть пароль",
     "Saved": "Збережено",
     "Update your account's profile information.": "Оновіть інформацію профілю свого облікового запису.",
-    "one_field_required" : "Принаймні одне поле є обов’язковим.",
+    "one_field_required": "Принаймні одне поле є обов’язковим.",
     "Spendings": "Витрати",
     "Gas": "Газ",
     "Odorant": "Одорант",
@@ -126,18 +126,43 @@
     "Update record": "Оновити запис",
     "Logout": "Вийти з облікового запису",
     "Already registered?": "Вже зареєстровані?",
-
     "Days": "Дні",
-    "Model": "Запис",
+    "Record": "Запис",
     "Field": "Поле",
     "Chart Type": "Тип діаграми",
-
     "stations_by_city": "Станції за містами",
     "stations_by_region": "Станції за регіонами",
     "stations_by_type": "Станції за типами",
     "select_report_type:": "Звіт:",
     "forecast_depth": "Глибина прогнозу",
-
-    "Back": "Назад"
+    "Back": "Назад",
+    "journal": "Журнал",
+    "spendings": "Витрати",
+    "self_spendings": "Власні витрати",
+    "pressure_in": "Тиск вх.",
+    "pressure_out_1": "Тиск вих. I",
+    "pressure_out_2": "Тиск вих. II",
+    "temperature_1": "℃ вих. I",
+    "temperature_2": "℃ вих. II",
+    "odorant_value_1": "Рівень одоранту I",
+    "odorant_value_2": "Рівень одоранту II",
+    "gas_heater_temperature_in": "℃ вх. ПГ",
+    "gas_heater_temperature_out": "℃ вих. ПГ",
+    "gas": "Газ",
+    "odorant": "Одорант",
+    "heater_time": "Час роботи обігрівача",
+    "boiler_time": "Час роботи котла",
+    "heater_gas": "Газ для обігрівача",
+    "boiler_gas": "Газ для котла",
+    "Download PNG": "Завантажити PNG",
+    "Download JPEG": "Завантажити JPEG",
+    "Download PDF": "Завантажити PDF",
+    "Download SVG": "Завантажити SVG",
+    "Reset Zoom": "Скинути масштаб",
+    "Reset Zoom Title": "Скинути масштаб до 1:1",
+    "Loading": "Завантаження...",
+    "Months": ["Січень", "Лютий", "Березень", "Квітень", "Травень", "Червень", "Липень", "Серпень", "Вересень", "Жовтень", "Листопад", "Грудень"],
+    "Weekdays": ["Неділя", "Понеділок", "Вівторок", "Середа", "Четвер", "П’ятниця", "Субота"],
+    "ShortMonths": ["Січ", "Лют", "Бер", "Кві", "Тра", "Чер", "Лип", "Сер", "Вер", "Жов", "Лис", "Гру"]
 
 }
