Refactor profile update to spatie

--- a/resources/lang/ua.json
+++ b/resources/lang/ua.json
@@ -163,6 +163,8 @@
     "Loading": "Завантаження...",
     "Months": ["Січень", "Лютий", "Березень", "Квітень", "Травень", "Червень", "Липень", "Серпень", "Вересень", "Жовтень", "Листопад", "Грудень"],
     "Weekdays": ["Неділя", "Понеділок", "Вівторок", "Середа", "Четвер", "П’ятниця", "Субота"],
-    "ShortMonths": ["Січ", "Лют", "Бер", "Кві", "Тра", "Чер", "Лип", "Сер", "Вер", "Жов", "Лис", "Гру"]
-
+    "ShortMonths": ["Січ", "Лют", "Бер", "Кві", "Тра", "Чер", "Лип", "Сер", "Вер", "Жов", "Лис", "Гру"],
+    "ADMIN" : "Адміністратор",
+    "OPERATOR" : "Оператор",
+    "ANALYST" : "Аналітик"
 }
