--- a/resources/lang/ua.json
+++ b/resources/lang/ua.json
@@ -166,5 +166,8 @@
     "ShortMonths": ["Січ", "Лют", "Бер", "Кві", "Тра", "Чер", "Лип", "Сер", "Вер", "Жов", "Лис", "Гру"],
     "ADMIN" : "Адміністратор",
     "OPERATOR" : "Оператор",
-    "ANALYST" : "Аналітик"
+    "ANALYST" : "Аналітик",
+    "Admin Section": "Секція адміністратора",
+    "Logging": "Лог змін",
+    "Return to Dashboard": "Повернутися на головну"
 }
