--- a/resources/lang/ua.json
+++ b/resources/lang/ua.json
@@ -169,5 +169,6 @@
     "ANALYST" : "Аналітик",
     "Admin Section": "Секція адміністратора",
     "Logging": "Лог змін",
-    "Return to Dashboard": "Повернутися на головну"
+    "Return to Dashboard": "Повернутися на головну",
+    "All Stations": "Всі станції"
 }
