Confirms and 3-day control

--- a/resources/lang/ua.json
+++ b/resources/lang/ua.json
@@ -170,5 +170,6 @@
     "Admin Section": "Секція адміністратора",
     "Logging": "Лог змін",
     "Return to Dashboard": "Повернутися на головну",
-    "All Stations": "Всі станції"
+    "All Stations": "Всі станції",
+    "Personnel_accounting": "Облік персоналу"
 }
