--- a/resources/lang/ua.json
+++ b/resources/lang/ua.json
@@ -171,5 +171,25 @@
     "Logging": "Лог змін",
     "Return to Dashboard": "Повернутися на головну",
     "All Stations": "Всі станції",
-    "Personnel_accounting": "Облік персоналу"
+    "Personnel_accounting": "Облік персоналу",
+    "Logs": "Логи",
+    "ID": "ID",
+    "User": "Користувач",
+    "Action": "Дія",
+    "Table": "Таблиця",
+    "Changes": "Зміни",
+    "Date": "Дата",
+    "Deleted": "Видалено",
+    "No changes": "Без змін",
+    "Undo": "Скасувати",
+    "Users": "Користувачі",
+    "Register User": "Зареєструвати користувача",
+    "Select a station": "Оберіть станцію",
+    "User Management": "Керування персоналом",
+    "Create User": "Додати користувача",
+    "View Trashed Users": "Перегляд видалених користувачів",
+    "Trashed Users": "Видалені користувачі",
+    "View Active Users": "Перегляд активних користувачів",
+    "Restore": "Відновити",
+    "Edit User": "Редагувати користувача"
 }
