--- a/resources/lang/ua.json
+++ b/resources/lang/ua.json
@@ -191,5 +191,10 @@
     "Trashed Users": "Видалені користувачі",
     "View Active Users": "Перегляд активних користувачів",
     "Restore": "Відновити",
-    "Edit User": "Редагувати користувача"
+    "Edit User": "Редагувати користувача",
+    "Report": "Звіт",
+    "Overall": "Загалом",
+    "for": "для",
+    "days": "днів",
+    "All stations": "Всі станції"
 }
