--- a/resources/lang/ua.json
+++ b/resources/lang/ua.json
@@ -196,5 +196,12 @@
     "Overall": "Загалом",
     "for": "для",
     "days": "днів",
-    "All stations": "Всі станції"
+    "All stations": "Всі станції",
+    "header": "Заголовок",
+    "Are you sure you want to delete this item?": "Ви впевнені, що хочете видалити цей елемент?",
+    "Generate Report": "Створити звіт",
+    "for the last ": "за останні ",
+    " days": " днів",
+    "No problems with gassiness at ": "Немає проблем з загазованістю на ",
+    "All stations are fine with gassiness ": "Немає проблем з загазованістю на всіх станціях "
 }
