Operator and station in tables

--- a/resources/lang/ua.json
+++ b/resources/lang/ua.json
@@ -107,8 +107,8 @@
     "Pressure Out 2": "Тиск вих. II",
     "Temperature 1": "℃ вих. I",
     "Temperature 2": "℃ вих. II",
-    "Odorant Value 1": "Рівень одоранту I",
-    "Odorant Value 2": "Рівень одоранту II",
+    "Odorant Value 1": "Одорант I",
+    "Odorant Value 2": "Одорант II",
     "Gas Heater Temperature In": "℃ вх. ПГ",
     "Gas Heater Temperature Out": "℃ вих. ПГ",
     "Add Journal": "Додати показники",
@@ -144,8 +144,8 @@
     "pressure_out_2": "Тиск вих. II",
     "temperature_1": "℃ вих. I",
     "temperature_2": "℃ вих. II",
-    "odorant_value_1": "Рівень одоранту I",
-    "odorant_value_2": "Рівень одоранту II",
+    "odorant_value_1": "Одорант I",
+    "odorant_value_2": "Одорант II",
     "gas_heater_temperature_in": "℃ вх. ПГ",
     "gas_heater_temperature_out": "℃ вих. ПГ",
     "gas": "Газ",
