--- a/resources/lang/ua.json
+++ b/resources/lang/ua.json
@@ -214,5 +214,13 @@
     "for all stations": "для всіх станцій",
     "Self Spendings Report": "Звіт про власні витрати",
     "Add Gassiness": "Додати запис про загазованність",
-    "Notes Report":"Звіт по виконаним операціям"
+    "Notes Report":"Звіт по виконаним операціям",
+    "AVG Heater Time": "Середній час роботи обігрівача",
+    "AVG Heater Gas": "Середнє споживання газу обігрівачем",
+    "AVG Boiler Time": "Середній час роботи котла",
+    "AVG Boiler Gas": "Середнє споживання газу котлом",
+    "Total Heater Time": "Загальний час роботи обігрівача",
+    "Total Heater Gas": "Загальне споживання газу обігрівачем",
+    "Total Boiler Time": "Загальний час роботи котла",
+    "Total Boiler Gas": "Загальне споживання газу котлом"
 }
